--- a/first-vue-app/package.json
+++ b/first-vue-app/package.json
@@ -10,10 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "admin-lte": "^3.0.0-alpha.2",
+    "admin-lte": "^2.4.2",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.2.1",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
