--- a/first-vue-app/package.json
+++ b/first-vue-app/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
