--- a/vue-adminlte/package.json
+++ b/vue-adminlte/package.json
@@ -19,7 +19,9 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-material": "^1.0.0-beta-10.2",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
