--- a/vue-adminlte/package.json
+++ b/vue-adminlte/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "admin-lte": "^2.4.2",
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
