--- a/vue-adminlte/package.json
+++ b/vue-adminlte/package.json
@@ -17,11 +17,16 @@
     "admin-lte": "^2.4.2",
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
+    "cxlt-vue2-toastr": "^1.1.0",
     "font-awesome": "^4.7.0",
+    "iview": "^2.14.3",
     "jquery": "^3.2.1",
+    "js-md5": "^0.7.3",
     "vue": "^2.5.2",
+    "vue-bootstrap-pagination": "^2.10.3",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
+    "vue-toastr": "^2.0.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
