--- a/s-vue-app/package.json
+++ b/s-vue-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "s-vue-app",
   "version": "1.0.0",
-  "description": "A Vue.js project",
+  "description": "my second vue.js project for learning",
   "author": "wangdh <1366678737@qq.com>",
   "private": true,
   "scripts": {
@@ -11,7 +11,6 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "element-ui": "^2.3.7",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -30,13 +29,8 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
