--- a/s-vue-app/package.json
+++ b/s-vue-app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-cookies": "^1.5.6",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
