--- a/s-vue-app/package.json
+++ b/s-vue-app/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.6",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
