--- a/s-vue-app/package.json
+++ b/s-vue-app/package.json
@@ -11,8 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "js-md5": "^0.7.3",
+    "qs": "^6.5.2",
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.6",
+    "vue-lodash": "^2.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
